--- a/ServletsAndJsp/src/main/webapp/WEB-INF/web.xml
+++ b/ServletsAndJsp/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,15 @@
 		<servlet-name>abc</servlet-name>
 		<url-pattern>/add</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>pqr</servlet-name>
+		<servlet-class>com.learn.SqServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>pqr</servlet-name>
+		<url-pattern>/sq</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
