--- a/ServletsAndJsp/src/main/webapp/WEB-INF/web.xml
+++ b/ServletsAndJsp/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
     version="6.0">
 
-	<servlet>
+	<!-- <servlet>
 		<servlet-name>abc</servlet-name>
 		<servlet-class>com.learn.AddServlet</servlet-class>
 	</servlet>
@@ -23,6 +23,6 @@
 	<servlet-mapping>
 		<servlet-name>pqr</servlet-name>
 		<url-pattern>/sq</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping> -->
 	
 </web-app>
